# qt_video_test

./: CMakeLists.txt  main.cpp  video_stream.pro
include/: main_window.hpp
src/: main_window.cpp  main_window.h  main_window.hpp  video_player.cpp  video_player.h
src/video_widget/: frame_emitter.cpp  frame_emitter.h  gaussian_blur.cpp  gaussian_blur.h  output_video_surface.cpp  output_video_surface.h  sobel_operator.cpp  sobel_operator.h
